Name:          dwarf
Version:       0.23
License:       BSD3
License-file:  LICENSE
Category:      Data
Author:        Erik Charlebois
Copyright:     Erik Charlebois
Maintainer:    Erik Charlebois <erikcharlebois@gmail.com>
Stability:     unstable
Cabal-Version: >= 1.2
Build-Depends: base
Build-Type:    Custom
Synopsis:      Parser for DWARF debug format.
Description:   Parser for DWARF debug format.
Data-Files:    tests/Test.hs

library
    build-depends:   base >= 2 && < 5, transformers,
                     bytestring, containers, binary,
                     utf8-string >= 0.3.7
    hs-source-dirs:  src
    exposed-modules: Data.Dwarf
    other-modules:   Data.Dwarf.Types,
                     Data.Dwarf.Utils,
                     Data.Dwarf.Reader,
                     Data.Dwarf.Form,
                     Data.Dwarf.LNI,
                     Data.Dwarf.AT,
                     Data.Dwarf.ATE,
                     Data.Dwarf.OP,
                     Data.Dwarf.TAG,
                     Data.Dwarf.CFA
    ghc-options:     -Wall
